tipografia e google fonts

--- a/css/global.css
+++ b/css/global.css
@@ -25,6 +25,7 @@ img {
 }
 
 .subtitulo {
+  font-family: "Merriweather", Arial, sans-serif;
   font-size: 8rem;
   line-height: 1;
   text-transform: uppercase;
